tests/textual/error/bData.uplc
(program 0.0.0 [(builtin bData) (con string "hello world")])
